<resources>
    <string name="app_name">嘟嘟司机</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- 登录 -->
    <string name="app_login_show">手机</string>
    <string name="app_login_password">短信验证码</string>
    <string name="app_password">密码</string>
    <string name="app_set_pwd">设置密码</string>
    <string name="app_reset_pwd">新的密码</string>
    <string name="app_sign_in">登录</string>
    <string name="app_sign_up">注册</string>
    <string name="app_confirm">确定</string>
    <string name="app_req_code">获取验证码</string>
    <string name="app_fogot_password">忘记密码?</string>
    <string name="login_erro_is_null">"用户名、密码不能为空"</string>
    <string name="login_success">"登录成功"</string>
    <string name="login_failure">"登录失败"</string>
    <string name="reset_failure">"操作失败"</string>
    <string name="check_code_failure">"验证码错误"</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">SearchActivity</string>
    <!-- 个人界面 -->
    <string name="my_order_num">订单数%1$1d</string>
    <string name="height_praise_rate">好评率%1$.2f%</string>
    <!-- 确认账单界面 -->
    <string name="start_price" >%1$.2f元</string>
    <string name="mileage_text">里程%1$.2f公里</string>
    <string name="mileage_cost" >%1$.2f元</string>
    <string name="low_speed_text">低速%1$d分钟</string>
    <string name="low_speed_cost">%1$.2f元</string>
    <string name="confirm_dialog_content">请您确认费用无误，并提示乘客先付款后下车</string>
    <string name="wealth_add_notice">乘客尾号%1$s支付%2$.2f元，您此单收入请到“我的余额”查看详情</string>
    <string name="title_activity_alipay">AlipayActivity</string>
    <string name="title_activity_news">NewsActivity</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
